--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -9,15 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div id="app">
-            <!-- Контент будет загружаться динамически -->
-        </div>
-        <div class="footer">
-            Powered by Gtech Mobile
-        </div>
+    <div id="app">
+        <!-- Контент будет загружаться динамически -->
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
